RESOLVED FIXED190220
Fix a potential crash in NetworkProcess::deleteWebsiteDataForOrigins
https://bugs.webkit.org/show_bug.cgi?id=190220
Summary Fix a potential crash in NetworkProcess::deleteWebsiteDataForOrigins
Sihui Liu
Reported 2018-10-02 15:00:31 PDT
clearTasksHandler is moved multiple times.
Attachments
Patch (1.49 KB, patch)
2018-10-02 15:01 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2018-10-02 15:01:46 PDT
Chris Dumez
Comment 2 2018-10-02 15:28:27 PDT
Comment on attachment 351443 [details] Patch r=me
WebKit Commit Bot
Comment 3 2018-10-02 16:02:46 PDT
Comment on attachment 351443 [details] Patch Clearing flags on attachment: 351443 Committed r236772: <https://trac.webkit.org/changeset/236772>
WebKit Commit Bot
Comment 4 2018-10-02 16:02:48 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-10-02 16:03:32 PDT
Note You need to log in before you can comment on or make changes to this bug.