Fix a potential crash in NetworkProcess::deleteWebsiteDataForOrigins https://bugs.webkit.org/show_bug.cgi?id=190220

Reviewed by Chris Dumez.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::deleteWebsiteDataForOrigins):


Canonical link: https://commits.webkit.org/205178@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236772 268f45cc-cd09-0410-ab3c-d52691b4dbfc